// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderTemplateComment > ケース1（安全性高・挑戦不足型）で snapshot 一致 1`] = `
{
  "actionProposal": {
    "bullets": [
      "時間の区切りを入れるタイミングを1つ決め、終了後に参加者に「流れはどう感じたか」を一言聞く。",
      "次回、状況に合わせて進め方や問いを変えるタイミングを1つだけ意図して試す。",
    ],
    "summary": "流れの見え方の差を埋め、安心感を参加者と共有するための一歩を決める。",
  },
  "improvementHypotheses": {
    "bullets": [
      "メインが参加者より低めなのは、自己評価が厳しいか、参加者には流れがよく見えていた可能性。（流れ・即興）",
      "流れの編集や即興的な軌道修正に余裕がなかった可能性。内省で次回の改善点を探れる。（流れ・即興）",
    ],
  },
  "nextActions": {
    "bullets": [
      "時間の区切りを入れるタイミングを1つ決め、終了後に参加者に「流れはどう感じたか」を一言聞く。",
      "次回、状況に合わせて進め方や問いを変えるタイミングを1つだけ意図して試す。",
    ],
    "summary": "流れの見え方の差を埋め、安心感を参加者と共有するための一歩を決める。",
  },
  "reflectionQuestions": [
    {
      "intent": "自己認識と他者からの見え方のすり合わせ。次の改善の土台を共有する。",
      "question": "今回の場で、メインとして「うまくいった」と感じた瞬間はどこでしたか？ 参加者・サブの皆さんは、そのとき何を感じていましたか？",
    },
    {
      "intent": "6軸から優先して深掘りするテーマを選び、具体的なフィードバックを引き出す。",
      "question": "6つの観点（説明・設計、見える化・編集、場の観察、場のホールド・安心感、問いかけ・リフレーミング、流れ・即興）のうち、今日の振り返りで特に話したい視点はどれですか？ その視点で、メインに伝えたいことがあれば教えてください。",
    },
    {
      "intent": "具体的な次のアクションを対話で決める。約1時間の振り返りの締めとして実行可能な一歩に落とす。",
      "question": "次のファシリテーションで、メインが「1つだけ試してみる」としたら、何を試すと良さそうですか？ 参加者・サブの視点も含めて一言ずつ。",
    },
  ],
  "sectionComments": {
    "design": {
      "bullets": [
        "説明・設計はおおむね共有されている。役割間の点差が小さいと、伝わり方に差が少ない。",
        "目的・進め方・問いが参加者に伝わっていたと受け止められている可能性。",
      ],
    },
    "flow": {
      "bullets": [
        "流れの編集に余裕がなかった可能性。",
        "流れの編集や柔軟な軌道修正に改善の余地がある。メインは厳しめに見ている可能性。",
      ],
    },
    "hold": {
      "bullets": [
        "場のホールド・安心感が役割を超えて高く評価されている。安心して話せる場が保たれていたと読める。",
        "ホールドがメインと他役割で揃っている。",
      ],
    },
    "observation": {
      "bullets": [
        "観察がメインと他役割で揃っている。",
        "場の観察が役割を超えて高く評価されている。参加者の反応や空気を捉えていたと読める。",
      ],
    },
    "questioning": {
      "bullets": [
        "問いかけ・リフレーミングが役割を超えて高く評価されている。問いが届いていると読める。",
        "問いかけがメインと他役割で揃っている。",
      ],
    },
    "visibility": {
      "bullets": [
        "見える化・編集は高め。役割間の点差が小さいと、見え方の認識が近い。",
        "全体で整理され見える化されていたと受け止められている可能性。",
      ],
    },
  },
  "sharedLeadershipReflectionQuestions": [
    {
      "intent": "シェアドリーダーシップが発揮された場面の特定と、行動の言語化。",
      "question": "今回の場で、メインとサブが「二人でリーダーシップを取っていた」と感じた瞬間はいつでしたか？ そのとき、主導の受け渡しや役割分担はどうなっていましたか？",
    },
    {
      "intent": "「あの時、リーダーシップ発揮してたね」と言い合うことを促す。",
      "question": "相手（メイン／サブ）の「リーダーシップを発揮していた」と感じた具体的な瞬間を、ひとつ挙げて伝えてください。",
    },
    {
      "intent": "知覚・解釈の違いを可視化し、認知の違いとして学びの材料にする。",
      "question": "あの場面で、あなたは何に一番注目していましたか？ 同じ瞬間を、メイン・サブ・参加者でどう解釈していたか、一言ずつ共有してみましょう。",
    },
  ],
  "strengths": {
    "bullets": [
      "目的・進め方の伝達が役割間で近く、認識されている可能性。（説明・設計）",
      "参加者観察・安心感が最も高く、安心感・問いかけが役割を超えて共有されていると読める。（場のホールド・問いかけ）",
    ],
  },
  "summary": {
    "bullets": [
      "強みは場のホールド・安心感の領域、改善の手がかりは流れ・即興の領域と読めます。",
      "流れの編集に余裕がなかった可能性。",
    ],
    "factSentence": "場のホールド・安心感が最も高く評価され、流れ・即興は相対的に低めで伸ばせる領域と読めます。メインと参加者で傾向が近く、同じ強み・課題が共有されていたと解釈できます。",
  },
}
`;

exports[`renderTemplateComment > ケース2（鷹低・虫高）で snapshot 一致 1`] = `
{
  "actionProposal": {
    "bullets": [
      "冒頭で目的と進め方を1文で書き、参加者に一言確認する。",
      "流れの編集を1か所だけ意図して変えてみる。（流れ・即興）",
    ],
    "summary": "全体の設計の伝わりを次回に改善するため、1つだけ試す。",
  },
  "improvementHypotheses": {
    "bullets": [
      "参加者観察や安心感は高め。一方、全体の設計の見え方にずれがある可能性。（場の観察・ホールド）",
      "目的や進め方の伝達に改善余地があり、届かず内省の時間を取る余地あり。（説明・設計）",
    ],
  },
  "nextActions": {
    "bullets": [
      "冒頭で目的と進め方を1文で書き、参加者に一言確認する。",
      "流れの編集を1か所だけ意図して変えてみる。（流れ・即興）",
    ],
    "summary": "全体の設計の伝わりを次回に改善するため、1つだけ試す。",
  },
  "reflectionQuestions": [
    {
      "intent": "自己認識と他者からの見え方のすり合わせ。次の改善の土台を共有する。",
      "question": "今回の場で、メインとして「うまくいった」と感じた瞬間はどこでしたか？ 参加者・サブの皆さんは、そのとき何を感じていましたか？",
    },
    {
      "intent": "6軸から優先して深掘りするテーマを選び、具体的なフィードバックを引き出す。",
      "question": "6つの観点（説明・設計、見える化・編集、場の観察、場のホールド・安心感、問いかけ・リフレーミング、流れ・即興）のうち、今日の振り返りで特に話したい視点はどれですか？ その視点で、メインに伝えたいことがあれば教えてください。",
    },
    {
      "intent": "具体的な次のアクションを対話で決める。約1時間の振り返りの締めとして実行可能な一歩に落とす。",
      "question": "次のファシリテーションで、メインが「1つだけ試してみる」としたら、何を試すと良さそうですか？ 参加者・サブの視点も含めて一言ずつ。",
    },
  ],
  "sectionComments": {
    "design": {
      "bullets": [
        "説明・設計のどこに手を入れられそうか、相対差から仮説を立てる。",
        "役割間でメインが低めのときは、自己評価が厳しいか、他役割の方が高く見ている。",
      ],
    },
    "flow": {
      "bullets": [
        "時間と内容のバランス・柔軟な編集・即興力のうち、どれに改善の入り口があるか、相対差から仮説を立てる。",
        "振り返りで「流れはどう感じたか」を一言聞く。",
      ],
    },
    "hold": {
      "bullets": [
        "場のホールド・安心感は高め。役割間の点差が小さいと、安心感の届き方が近い。",
        "安心して話せる・挑戦できる場が保たれていたと受け止められている可能性。",
      ],
    },
    "observation": {
      "bullets": [
        "場の観察は高め。役割間の点差が小さいと、観察の届き方が近い。",
        "参加者の反応や空気を場に活かしていたと受け止められている可能性。",
      ],
    },
    "questioning": {
      "bullets": [
        "問いかけに手が入っている。",
        "問いかけやリフレーミングが参加者に届いていたと受け止められている可能性。",
      ],
    },
    "visibility": {
      "bullets": [
        "メインが低めのときは、自己評価が厳しいか、他役割の方が高く見ている。",
        "見える化のどこに手を入れられそうか、相対差から仮説を立てる。",
      ],
    },
  },
  "sharedLeadershipReflectionQuestions": [
    {
      "intent": "シェアドリーダーシップが発揮された場面の特定と、行動の言語化。",
      "question": "今回の場で、メインとサブが「二人でリーダーシップを取っていた」と感じた瞬間はいつでしたか？ そのとき、主導の受け渡しや役割分担はどうなっていましたか？",
    },
    {
      "intent": "「あの時、リーダーシップ発揮してたね」と言い合うことを促す。",
      "question": "相手（メイン／サブ）の「リーダーシップを発揮していた」と感じた具体的な瞬間を、ひとつ挙げて伝えてください。",
    },
    {
      "intent": "知覚・解釈の違いを可視化し、認知の違いとして学びの材料にする。",
      "question": "あの場面で、あなたは何に一番注目していましたか？ 同じ瞬間を、メイン・サブ・参加者でどう解釈していたか、一言ずつ共有してみましょう。",
    },
  ],
  "strengths": {
    "bullets": [
      "参加者の反応や空気を捉え、場に活かせていると読める。",
      "場の観察・ホールド・問いかけが高く、対話や問いが届いている可能性。",
    ],
  },
  "summary": {
    "bullets": [
      "強みは場の観察の領域、改善の手がかりは説明・設計の領域と読めます。",
      "説明・設計のどこに手を入れられそうか、相対差から仮説を立てる。",
    ],
    "factSentence": "場の観察が最も高く評価され、説明・設計は相対的に低めで伸ばせる領域と読めます。メイン・サブ・参加者とも傾向が近く、同じ強み・課題が共有されていたと解釈できます。",
  },
}
`;
